refactor: remove unused code